--- a/Assignment 2/Computer-Graphics-I/Computer-Graphics-I.vcxproj
+++ b/Assignment 2/Computer-Graphics-I/Computer-Graphics-I.vcxproj
@@ -85,7 +85,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
@@ -139,12 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DrawArc_unused.cpp" />
     <ClCompile Include="GraphicsAlgo.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Win32.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsAlgo.h" />
+    <ClInclude Include="Geometry.h" />
     <ClInclude Include="Win32.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
