--- a/Assignment 2/Computer-Graphics-I/Computer-Graphics-I.vcxproj.filters
+++ b/Assignment 2/Computer-Graphics-I/Computer-Graphics-I.vcxproj.filters
@@ -24,12 +24,21 @@
     <ClCompile Include="GraphicsAlgo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Geometry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawArc_unused.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Win32.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsAlgo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Geometry.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
